[package]
name = "ceobe_cookie_logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
typed-builder.workspace = true
thiserror.workspace = true
status-err = { path = "../../libs/status-err" }
futures.workspace = true
bitmaps.workspace = true
bitmap-convert.workspace = true
uuid.workspace = true
mob-push-server.workspace = true
general-request-client.workspace = true
ceobe-qiniu-upload.workspace = true
qiniu_service.workspace = true
qq-channel-warning = { version = "0.1.0", path = "../../middle-server/qq-channel-warning" }
tokio.workspace = true
redis = { workspace = true }
persistence = { workspace = true, features = ["help-crates", "model-ceobe-user", "redis", "model-ceobe-cookie", "model-fetcher"] }

[dependencies.redis_global]
path = "../../global/redis_global"