[package]
name = "ceobe_operation_logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
typed-builder.workspace = true
thiserror.workspace = true
status-err = { path = "../../libs/status-err" }
persistence = { workspace = true, features = ["model-ceobe-operate"] }
page_size = {path = "../../libs/page_size"}
futures.workspace = true
url.workspace = true
request-clients.workspace = true
reqwest.workspace = true

[dependencies.checker]
path = "../../libs/checker"