[package]
name = "ceobe_user_logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true}
typed-builder = { workspace = true }
thiserror = { workspace = true }
status-err = { path = "../../libs/status-err" }
range-limit = { path = "../../libs/range-limit" }
futures.workspace = true
uuid.workspace = true
tokio.workspace = true

[dependencies.mongo-models]
path = "../../models/mongo-models"

[dependencies.sql-models]
path = "../../models/sql-models"

[dependencies.checker]
path = "../../libs/checker"